# Wired-part

./: .coverage  .gitattributes  .gitignore  COMMERCIAL-LICENSE.md  GEMINI.md  LICENSE.md  README.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
.github/: copilot-instructions.md
directives/: Plan.md  import_export.md  inventory_management.md  job_tracking.md  llm_agent_usage.md  orders_returns.md
docs/: ARCHITECTURE.md  CHANGELOG.md  CROSS_PLATFORM.md  PERMISSIONS.md  SUPPLY_CHAIN.md  TESTING.md
execution/: db_backup.py  export_csv.py  import_csv.py  llm_query.py  seed_mock_data.py
src/wired_part/: __init__.py  __main__.py  app.py  config.py
tests/: conftest.py  test_config.py
tests/test_agent/: test_agent.py
tests/test_database/: test_activity_log.py  test_attachments.py  test_audit.py  test_billing.py  test_brands.py  test_categories.py  test_comprehensive.py  test_connection.py  test_consumption.py  test_deprecation.py  test_geolocation.py  test_hats.py  test_job_bill_rate.py  test_jobs_extended.py  test_labor.py  test_models.py  test_new_features.py  test_notebooks.py  test_order_analytics.py  test_order_hardening.py  test_order_permissions.py  test_orders.py  test_orders_extended.py  test_part_suppliers.py  test_part_types.py  test_part_variants.py  test_parts_lists.py  test_repo_coverage.py  test_repository.py  test_returns.py  test_search.py  test_shortfall.py  test_suppliers.py  test_trucks.py  test_user_settings.py  test_users.py  test_v17_features.py
tests/test_e2e/: conftest.py  test_analytics.py  test_chat_polish.py  (+13 more)
(+119 files in other folders)
