[project]
name = "wired-part"
version = "1.0.0"
description = "Electrician's Parts Manager - Inventory and Job Tracking"
readme = "README.md"
license = {file = "LICENSE.md"}
requires-python = ">=3.10"
authors = [
    {name = "WeirdToo LLC", email = "bob@weirdtoocompany.com"}
]
keywords = ["inventory", "electrician", "parts", "job-tracking", "desktop"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Office/Business",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "PySide6>=6.6.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "openpyxl>=3.1.0",
    "qrcode[pil]>=7.4.0",
    "reportlab>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-qt>=4.2.0",
    "pytest-cov>=4.1.0",
]

[project.scripts]
wired-part = "wired_part.app:main"

[project.gui-scripts]
wired-part-gui = "wired_part.app:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
